# pdftex

./: README.qstex
doc/archive/: README
doc/man/: pdftosrc.1
doc/manual/: .cvsignore  .svnignore  ChangeLog  Makefile  README  pdftex-help.txt  pdftex-i.tex  pdftex-syntax.txt  pdftex-t.tex  pdftex-t.txt  pdftex-w.tex  syntaxform.awk  syntaxform.pl
doc/samplepdf/: README  efcode.tex  pdfcolor.tex  protcode.tex  samplepdf.tex
source/: Annoucement-1.20a  Annoucement-1.20b  Annoucement-1.21a  Annoucement-1.30.0-rc1  Annoucement-1.30.0-rc3  Annoucement-1.30.0-rc4  Annoucement-1.30.0-rc5  Announcement-1.30.0  Announcement-1.30.1  Announcement-1.30.2  Announcement-1.30.3  Announcement-1.30.4  Announcement-1.30.5  Announcement-1.30.6  Announcement-1.40.0  Announcement-1.40.0-alpha-20051205  Announcement-1.40.1  Announcement-1.40.10  Announcement-1.40.3  Announcement-1.40.4  Announcement-1.40.5  Announcement-1.40.6  Announcement-1.40.7  Announcement-1.40.8  Announcement-1.40.9  Build  COPYING  INSTALL  Makefile  Makefile.in  NEWS  README  build-pdftex.sh  build.sh  configure.in  pdftex.xml  sync-pdftex.sh  withenable.ac
source/src/: Build  Makefile.in  README  config.cache  configure  configure.in  reautoconf  tetex.ac  win32.mak  withenable.ac
source/src/texk/dvipsk/: Makefile.in  afm2tfm.c  afm2tfm.rc  config.h  configure.in  depend.mk  dvips.h  dvips.help  dvips.info  dvips.info-1  dvips.info-2  dvips.info-3  dvips.info-4  dvips.rc  dvips.texi  resident.c  stamp-auto.in  win32.mak  writet1.c
tests/: Common.mak  Makefile
www/: NEWS  README  index.html
(+697 files in other folders)
